# iwa

./: .eslintrc.json  .gitignore  .gitleaksignore  ANALYSIS.md  CLAUDE.md  Dockerfile  Justfile  README.md  TODO  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_agent_fund_chain.py
.github/workflows/: release.yml
docs/: CLAUDE.md  core.md  index.md  plugins.md  security.md
docs/dev/: contributing.md  release.md
docs/interfaces/: cli_tui.md  mcp.md  web.md
docs/plugins/: gnosis.md  olas.md
scripts/: CLAUDE.md  lint_js_html.py
scripts/mcp/: __init__.py  claude_agent.py  client.py  gemini_agent.py  openai_agent.py
site/: 404.html  index.html  objects.inv
site/cli/: index.html
site/core/: index.html
site/plugins/: index.html
site/search/: search_index.json
site/security/: index.html
src/: CLAUDE.md  Makefile  conftest.py
src/iwa/: CLAUDE.md  __main__.py
src/tests/: conftest.py  test_account_service.py  test_atomic_config_save.py  test_balance_service.py  test_chain.py  test_chain_interface.py  test_chain_interface_coverage.py  test_chain_interface_coverage2.py  test_chainlist_enrichment.py  test_cli.py  test_contract.py  test_contract_coverage.py  test_core_coverage.py  test_core_db_integration.py  test_core_test.py  test_cow.py  test_cow_protocol_gaps.py  test_db.py  test_db_gaps.py  test_decoder.py  test_drain_coverage.py  test_erc20.py  test_ethereum_address_integration.py  test_events.py  test_gnosis_plugin.py  test_ipfs.py  test_keys.py  test_keystorage_edge_cases.py  test_legacy_wallet.py  test_main.py  test_mcp_server.py  test_mech_batch.py  test_migration.py  test_mnemonic.py  test_modals.py  test_models.py  test_monitor.py  test_multisend.py  test_plugin_service.py  test_pricing.py  (+52 more)
src/tools/: CLAUDE.md  test_all_mech_flows.py  (+2 more)
tools/: test_all_mech_flows.py  test_marketplace_fix.py
(+243 files in other folders)
