[project]
name = "iwa"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "eth-abi>=5.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-telegram-bot>=22.5",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "typer>=0.19.2",
    "web3>=7.13.0",
]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
